--- a/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
+++ b/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
@@ -1,11 +1,7 @@
-﻿<!DOCTYPE html>
+﻿{@Title Index}
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title>Index</title>
-</head>
-<body>
-    <p>Index</p>
-</body>
-</html>
+{@Content
+<h1>Index</h1>
+<hr/>
+<p>This is the Index Page.</p>
+}
