Bug fixes Fixed bug where included template names were not being extracted correctly Fixed bug where nested use template directives were having their {} stripped when loaded

--- a/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
+++ b/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
@@ -1,7 +1,10 @@
-﻿{@Title Index}
+﻿{!Footer.html}
+
+{@Title Index}
 
 {@Content
 <h1>Index</h1>
 <hr/>
 <p>This is the Index Page.</p>
+{#Footer}
 }
