Comment testing changes

--- a/Thingy.WebServerLite.Test.Gui/site/Views/Default/Footer.html
+++ b/Thingy.WebServerLite.Test.Gui/site/Views/Default/Footer.html
@@ -1,4 +1,10 @@
-﻿{@Footer
+﻿{* 
+    This is an template that does not map directly to an action
+    but is included and used by other action templates
+
+    This is also a multi-line comment
+*}
+{@Footer
 <hr/>
 <p>(C) 2017 - Developed by Feefa for Northern Alien Studios</p>
 }
