--- a/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
+++ b/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
@@ -1,7 +1,10 @@
-﻿{!Footer.html}
+﻿{* Include the footer template *}
+{!Footer.html}
 
+{* Title template *}
 {@Title Index}
 
+{* Content template *}
 {@Content
 <h1>Index</h1>
 <hr/>
