--- a/Thingy.WebServerLite.Test.Gui/site/Views/Master.html
+++ b/Thingy.WebServerLite.Test.Gui/site/Views/Master.html
@@ -3,9 +3,11 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    {* Use the Title template of the page template to render the title *}
     <title>{#Title}</title>
 </head>
 <body>
+    {* Use the Content template of the page template to render content *}
     {#Content}
 </body>
 </html>
