Addressing model directly The model can now be referred to directly in a view field using "model" - This allows us to use a simple value as the model - Optionally any view field property name can be qualified with "model"

--- a/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
+++ b/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
@@ -9,5 +9,7 @@
 <h1>Index</h1>
 <hr/>
 <p>This is the Index Page.</p>
+<p>{model}</p>
+<p>The return value was {model.Length} characters long.</p>
 {#Footer}
 }
