View Library Calls Fixed bug where the command was being truncated Added code to gather default values when the parameter list is short as MethodInfo.Invoke() does not do this by default

--- a/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
+++ b/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
@@ -11,5 +11,7 @@
 <p>This is the Index Page.</p>
 <p>{model}</p>
 <p>The return value was {model.Length} characters long.</p>
+<p>This button was created using a view library call</p>
+{=Html.Button("test-button", "Test")}
 {#Footer}
 }
