--- a/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
+++ b/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
@@ -9,9 +9,11 @@
 <h1>Index</h1>
 <hr/>
 <p>This is the Index Page.</p>
-<p>{model}</p>
-<p>The return value was {model.Length} characters long.</p>
+{#Lines model}
+<p>The return value contains {model.Length} elements.</p>
 <p>This button was created using a view library call</p>
 {=Html.Button("test-button", "Test")}
 {#Footer}
 }
+
+{@Lines <p>{model}</p>}
