Request Content Fields
When ContentType="application/x-www-form-urlencoded" then parse the content stream into the request's Fields collection

--- a/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
+++ b/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
@@ -13,6 +13,14 @@
 <p>The return value contains {model.Length} elements.</p>
 <p>This button was created using a view library call</p>
 {=Html.Button("test-button", "Test")}
+<hr/>
+<form method="POST" action="/Default/TestPost">
+    <input type="text" name="text-input-1" />
+    <input type="hidden" name="hidden-input-1" value="hidden-value-1" />
+    <label><input type="radio" name="radio-input-1" value="radio-value-1"> On</label>
+    <label><input type="radio" name="radio-input-1" value="radio-value-2"> Off</label>
+    <button type="submit">Submit</button>
+</form>
 {#Footer}
 }
 
