Revamped View function behaviour {?Library.Function() template} will only render template if Library.Function() returns true {=Library.Function()} inserts the function result into the document {=Library.Function() template) renders the template with the function result as the new model UNLESS template is a string that starts with [[HasConntent]], in which case the template is rendered with the existing model and subbed in for the [[Content]] placeholder in the function result

--- a/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
+++ b/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
@@ -20,6 +20,24 @@
     <label><input type="radio" name="radio-input-1" value="radio-value-1"> On</label>
     <label><input type="radio" name="radio-input-1" value="radio-value-2"> Off</label>
     <button type="submit">Submit</button>
+    <hr/>
+    {=Html.TestDiv()
+        <h2>Here's a test button</h2>
+        {=Html.Button("button", "OK")}
+        <p>Does it look OK?</p>
+    }
+    <h2>Testing conditional by passing Yes</h2>
+    {?Html.YesNoToBool("Yes")
+        <p>This was the YES call. You should see this one</p>
+    }
+    <h2>Testing conditional by passing No</h2>
+    {?Html.YesNoToBool("No")
+        <p>This was the NO call. You should not see this one</p>
+    }
+    {=Html.ShinyNewModel()
+        <h2>Shiny new model?</h2>
+        {model}
+    }
 </form>
 {#Footer}
 }
