--- a/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
+++ b/Thingy.WebServerLite.Test.Gui/site/Views/Default/Index.html
@@ -31,7 +31,7 @@
         <p>This was the YES call. You should see this one</p>
     }
     <h2>Testing conditional by passing No</h2>
-    {?Html.YesONoToBool("No")
+    {?Html.YesNoToBool("No")
         <p>This was the NO call. You should not see this one</p>
     }
     {=Html.ShinyNewModel()
